--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
     <main>
         <header>
             <h1>Cursos grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em video">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso em Video HMTL">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque laborum veniam, repellat autem vero aliquid suscipit rerum pariatur harum ipsum dicta minus quibusdam sunt quo dolor molestias velit. Excepturi, esse.
             </p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de Java Script</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso Java Script">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nobis adipisci, veritatis, dolores quae eaque, deserunt inventore vero eum nulla maiores at consectetur. Tempora quam doloribus rerum similique consequuntur eligendi!</p>
+            <p><a href="curso-js.html">Acesse o curso de Java Script</a></p>
         </article>
     </main>
 </body>
